--- a/node-aula01/package.json
+++ b/node-aula01/package.json
@@ -8,7 +8,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "falar":"echo 'Opa, tudo bem? eu sou o Daniel!'"
   },
   "dependencies": {
     "express": "^5.1.0",
